Fix: align background position

--- a/radio-service-ui/src/Wrapper.scss
+++ b/radio-service-ui/src/Wrapper.scss
@@ -42,6 +42,7 @@ html, body { min-height: 100vh; }
     border-top-left-radius: 30px;
     border-bottom-left-radius: 30px;
     background-size: cover;
+    background-position-x: center;
 
     .bg-wrapper {
       padding: 20px;
